--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
            <hr> <hr>
 
     <h2><strong>Here is the page for predictive modeling on Super store data set </strong></h2>
-      <a href="C:/Users/email/OneDrive/Documents/Class-Repo Units/Unit-20/Tableau Projects/GlobalDataVizs/SuperStore_SupplyChain/Super_Store_Suppy_Chain" title=" Hindi Varnmala Chart"> 
+      <a href="C:/Users/email/OneDrive/Documents/Class-Repo Units/Unit-20/Tableau Projects/GlobalDataVizs/SuperStore_SupplyChain/GlobalSuperStore.html" title=" Hindi Varnmala Chart"> 
    
     <br> 
-    <img src="C:/Users/email/OneDrive/Documents/Class-Repo Units/Unit-20/Tableau Projects/GlobalDataVizs/SuperStore_SupplyChain/Super_Store_Suppy_Chain" width="700" height="500" alt = "Table contents of the page">
+    <img src="C:/Users/email/OneDrive/Documents/Class-Repo Units/Unit-20/Tableau Projects/GlobalDataVizs/SuperStore_SupplyChain/SuperStore.png" width="700" height="500" alt = "Table contents of the page">
     <hr></a>
        
         <hr>   <!-- href="#" target="_blank"> will open the same page again -->
