--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hindi Learning</title>
+    <title>Predictive Modelling</title>
     </head>
 <body>
     <br>
-    <h1 align = 'center' style="color:rgb(54, 85, 77)">Life is a challenge - be ready for it everyday!!! </h1>
+    <h1 align = 'center' style="color:rgb(54, 85, 77)">Exploratory Data Analysis is fun!!! </h1>
     <br>
            <hr> <hr>
 
     <h2><strong>Here is the page for predictive modeling on Super store data set </strong></h2>
-      <a href="C:/Users/email/OneDrive/Documents/Class-Repo Units/Unit-20/Tableau Projects/GlobalDataVizs/SuperStore_SupplyChain/GlobalSuperStore.html" title=" Hindi Varnmala Chart"> 
+      <a href="GlobalSuperStore.html" title=" Hindi Varnmala Chart"> 
    
     <br> 
-    <img src="C:/Users/email/OneDrive/Documents/Class-Repo Units/Unit-20/Tableau Projects/GlobalDataVizs/SuperStore_SupplyChain/SuperStore.png" width="700" height="500" alt = "Table contents of the page">
+    <img src="SuperStore.png" width="700" height="500" alt = "Table contents of the page">
     <hr></a>
        
         <hr>   <!-- href="#" target="_blank"> will open the same page again -->
-        <h4 align = "center"><a href="#" target="_blank" > Go to Top </a>        </h4>      
-</ul>
+        <h4 align = "center"><a href="#" target="_blank" > Go to Top </a> 
+        
+        </h4>      
+
 </body>
 </html>
