--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="GlobalSuperStore.html" title=" Hindi Varnmala Chart"> 
    
     <br> 
-    <img src="SuperStore.png" width="700" height="500" alt = "Table contents of the page">
+    <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis">
     <hr></a>
        
         <hr>   <!-- href="#" target="_blank"> will open the same page again -->
