--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
            <hr> <hr>
 
     <h2><strong>Here is the page for predictive modeling on Super store data set </strong></h2>
-      <a href="GlobalSuperStore.html" title=" Hindi Varnmala Chart"> 
+      <a href="GlobalSuperStore.html" title=" Sales & Profit Analysis"> 
    
     <br> 
     <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis">
     <hr></a>
        
+
+    <h2><strong>Tableau Public Super store Analysis Page </strong></h2>
+      <a href="https://public.tableau.com/profile/sandhya.kumari#!/vizhome/Supers_Store_Supply_Chain/SalesAnalysisStory" title=" Supers_Store_Supply_Chain"> 
+   
+    <br> 
+    <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis">
+    <hr></a>
+
         <hr>   <!-- href="#" target="_blank"> will open the same page again -->
         <h4 align = "center"><a href="#" target="_blank" > Go to Top </a> 
         
