--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
            <hr> <hr>
 
     <h2><strong>Here is the page for predictive modeling on Super store data set </strong></h2>
-      <a href="GlobalSuperStore.html" title=" Sales & Profit Analysis"> 
+      <a href="GlobalSuperStore.html" >Sales & Profit Analysis</a>
    
     <br> 
-    <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis">
-    <hr></a>
+    <!-- <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis"> -->
+    <hr>
        
-
     <h2><strong>Tableau Public Super store Analysis Page </strong></h2>
       <a href="https://public.tableau.com/profile/sandhya.kumari#!/vizhome/Supers_Store_Supply_Chain/SalesAnalysisStory" title=" Supers_Store_Supply_Chain"> 
    
