--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
            <hr> <hr>
 
     <h2><strong>Here is the page for predictive modeling on Super store data set </strong></h2>
-      <a href="GlobalSuperStore.html" >Sales & Profit Analysis</a>
+      <a href="GlobalSuperStore.html">Sales & Profit Analysis</a>
    
     <br> 
     <!-- <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis"> -->
     <hr>
        
     <h2><strong>Tableau Public Super store Analysis Page </strong></h2>
-      <a href="https://public.tableau.com/profile/sandhya.kumari#!/vizhome/Supers_Store_Supply_Chain/SalesAnalysisStory" title=" Supers_Store_Supply_Chain"> 
+      <a href="https://public.tableau.com/profile/sandhya.kumari#!/vizhome/Supers_Store_Supply_Chain/SalesAnalysisStory"> Supers_Store_Supply_Chain</a>
    
     <br> 
-    <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis">
-    <hr></a>
+    <!-- <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis"> -->
+    <hr>
 
         <hr>   <!-- href="#" target="_blank"> will open the same page again -->
         <h4 align = "center"><a href="#" target="_blank" > Go to Top </a> 
