--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="https://public.tableau.com/profile/sandhya.kumari#!/vizhome/Supers_Store_Supply_Chain/SalesAnalysisStory"> Supers_Store_Supply_Chain</a>
    
     <br> 
+    <div class='tableauPlaceholder' id='viz1606055607478' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YF&#47;YFR42C2Z2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;YFR42C2Z2' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YF&#47;YFR42C2Z2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>  
     <!-- <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis"> -->
     <hr>
 
@@ -29,6 +30,6 @@
         <h4 align = "center"><a href="#" target="_blank" > Go to Top </a> 
         
         </h4>      
-
+        <script type='text/javascript'> var divElement = document.getElementById('viz1606055607478');  var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);  </script>
 </body>
 </html>
