--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            <hr> <hr>
 
     <h2><strong>Here is the page for predictive modeling on Super store data set </strong></h2>
-      <a href="GlobalSuperStore.html">Sales & Profit Analysis</a>
+      <a href="SuperStore.html">Sales & Profit Analysis</a>
    
     <br> 
     <!-- <img src="SuperStore.png" width="700" height="500" alt = "Navigate To GLobal Super Store Data Analysis"> -->
